Refs #11384: Restored overflow hidden rule for body element to prevent horizontal scrolling in iOS, but to both axe, which prevents the original double-scrollbar bug described in #11384.

--- a/boots_grid/css/base.less
+++ b/boots_grid/css/base.less
@@ -7,11 +7,13 @@
 html {
   -webkit-text-size-adjust: none;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
   position: relative;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 // Generally prevent images from breaking their containers.
